--- a/public_html/html/css/screen-sm-max.less
+++ b/public_html/html/css/screen-sm-max.less
@@ -24,4 +24,12 @@
         }
     }
     
+    .foot-contact .grid {
+      .text-right{
+          text-align: center;
+      }
+      .text-left{
+          text-align: center;
+      } 
+  }
 }
